sisiya-client-checks (0.6.30.26~ppa1) precise; urgency=low

  * added data entry to sisiya_raid_hpacu.pl, closes #35
  * added data entry to sisiya_smart.pl, closes #36
  * added data entry to sisiya_ssh-attack.pl, closes #38
  * added data entry to sisiya_system.pl, closes #39
  * added data entry to sisiya_users.pl, closes #40
  * added data entry to sisiya_oracle_hitratios.pl, closes #31
  * added data entry to sisiya_oracle_tablespace.pl, closes #32
  * added data entry to sisiya_mysql_table_status.pl, closes #29
  * added data entry to sisiya_listening_socket.pl, closes #25
  * added data entry #27 (https://github.com/erdalmutlu1/sisiya/issues/27) to
    the sisiya_lpstat.pl client check script
  * added data entry #28 (https://github.com/erdalmutlu1/sisiya/issues/28) to
    the sisiya_mailq.pl client check script
  * added data entry #34 (https://github.com/erdalmutlu1/sisiya/issues/34) to
    the sisiya_progs.pl client check script
  * add data entry to sisiya_dmesg.pl client check script
  * fixed bug #12 (https://github.com/erdalmutlu1/sisiya/issues/12) in the
    sisiya_dmesg.pl client check script
  * add data entry to sisiya_temperature.pl client check script
  * add data entry to sisiya_baan_edi.pl client check script
  * add data entry to sisiya_baan_jobs_status.pl client check script
  * add data entry to sisiya_baan_slm.pl client check script
  * add data entry to sisiya_baan_users.pl client check script
  * add data entry to sisiya_battery.pl client check script

 -- Erdal Mutlu <erdal@sisiya.org>  Sun, 9 Mar 2014 12:29:28 +0200

sisiya-client-checks (0.6.30.25~ppa1) precise; urgency=low

  * minor changes in packages

 -- Erdal Mutlu <erdal@sisiya.org>  Thu, 6 Mar 2014 21:29:28 +0200

sisiya-client-checks (0.6.30.24~ppa1) precise; urgency=low

  * uploaded to launchpad.net

 -- Erdal Mutlu <erdal@sisiya.org>  Thu, 6 Mar 2014 15:08:28 +0200

sisiya-client-checks (0.6.30.23~ppa1) precise; urgency=low

  * trying to upload to launchpad.net
